--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=KRrtc
+name=ArduMekaWiFi
 version=1.0.0
 author=Ajang Rahmat <ajangrahmat@gmail.com>
 maintainer=Ajang Rahmat <ajangrahmat@gmail.com>
-sentence=Simple Read RTC DS1307.
-paragraph=Silakan gunakan library ini untuk mempermudah melakukan proses pembacaan waktu pada RTC DS1307. Karena library ini hanya menyederhanakan dari librari RTCLib, pastikan library RTCLib nya juga sudah di tambahkan ya.
+sentence=Library Sederhana Untuk Menghubungkan ESP ke WiFi.
+paragraph=Silakan gunakan library ini untuk mempermudah melakukan proses menghubungkan ESP ke WiFi.
 category=Communication
 url=https://kelasrobot.com
 architectures=*
